# long-sang-forge

./: .env.example  .gitignore  .n8n.env  ACADEMY_BACKEND_CONNECTED.md  ACADEMY_FEATURES_COMPLETE.md  ACADEMY_FOUNDATION_MASTER_PLAN.md  ACADEMY_INTEGRATION_COMPLETE.md  ADVANCED_AI_FEATURES_COMPLETE.md  ADVANCED_FEATURES_GUIDE.md  AGENT_CATEGORIES_FEATURE.md  AGENT_EXECUTION_GUIDE.md  AINEWBIEVN_LOVABLE_PROMPT.md  AI_AGENTS_COMPLETE.md  AI_AGENT_CENTER_IMPLEMENTATION_SUMMARY.md  AI_AGENT_CENTER_PLAN.md  AI_AGENT_CENTER_QUICKSTART.md  AI_AGENT_MASTER_ARCHITECTURE.md  AI_AGENT_SPECIFICATIONS.md  AI_AUTOMATION_STATUS.md  AI_AUTOMATION_USER_GUIDE.md  AI_AUTO_SEO_COMPLETE.md  AI_CUSTOMER_SUPPORT_AGENT_RECOMMENDATION.md  AI_INTEGRATION_GUIDE.md  AI_SEO_AUTO_FEATURE_PLAN.md  ALL_FEATURES_COMPLETED.md  ALWAYS-RUNNING-GUIDE.md  API_TESTING_GUIDE.md  APP_SHOWCASE_CMS_README.md  APP_SHOWCASE_MULTIPROJECT.md  AUTOMATION_COMPLETE_GUIDE.md  AUTOMATION_README.md  AUTOMATION_SETUP.md  AUTOMATION_STATUS_FINAL.md  AUTOMATION_SYSTEM_REPORT.md  AUTONOMOUS_WORK_SUMMARY.md  BILLIARDS_SEO_COMPLETE.md  BẮT_ĐẦU_NGAY.md  CHECKLIST_DEPLOYMENT.md  CODE_QUALITY_IMPROVEMENTS.md  COMMUNITY_SETUP.md  (+123 more)
personal-ai-system/: .env.example  .gitignore  AGENT_CENTER_README.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  START.bat  START_API.bat  docker-compose.yml  pyproject.toml  pytest.ini  requirements-aiagent.txt  requirements.txt  setup_agent_center.py
personal-ai-system/agents/: __init__.py  life_agent.py  orchestrator.py  research_agent.py  work_agent.py
personal-ai-system/api/: __init__.py  (+3 more)
(+838 files in other folders)
